Modified Service Detail , create quill-custom to use quilljs editor for service description, modified feedbackForm and feedbacklist

--- a/sparkle-salon-fe/src/index.css
+++ b/sparkle-salon-fe/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Import Quill styles */
+@import 'react-quill/dist/quill.snow.css';
+@import './styles/quill-custom.css';
